<resources>
    <string name="app_name">SignCV</string>
    <string name="splash_name">Знакодетектор</string>
    <string name="recognition_road_sign">Распознавание дорожных знаков</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selection_section">Выбор раздела</string>
    <string name="galery">Галерея</string>
    <string name="camera">Видеокамера</string>
    <string name="photoGallery">Фотогалерея</string>
    <string name="recognition_road_sign_image">Распозанвание дорожных знаков(по картинке)</string>
    <string name="select_photo_gallery">галерея</string>
    <string name="select_photo_camer">камера</string>
    <string name="pedestrian">Распознавание пешеходов(по картинке)</string>
    <string name="many_detectors">Разлиные детекторы</string>
    <string name="attention">Внимание</string>
    <string name="choose_photo_loaded">Выберете откуда будет загружена фотка</string>
    <string name="cancel">Отмена</string>
    <string name="photo_not_correct">Данная фотография не подходит.Выберете другую.</string>
    <string name="select_video">Выбрать видео</string>
    <string name="detect">Распознать</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Распознавание по фотографии</string>
    <string name="drawer_item_free_play">Распознавание через камеру</string>
    <string name="drawer_item_settings">Настройки видео</string>
    <string name="drawer_item_contact">Контакты</string>
    <string name="no_signs">Пока нету распознанных знаков</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_photo_detect">выберете или сделайте фотографию</string>
    <string name="photo_detect">нажмите кнопку "распознать"</string>
    <string name="sign_no_detect">дорожный знак не найден</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sezeVideo">Максимальное разрешение видеоизображения</string>
    <string name="minSizeDetect">Коэффициент минимального размера изображения</string>
    <string name="scaleFactor">Коэффициент масштабирования</string>
</resources>
